--- a/HealthTrackerApp/src/main/resources/log_in.fxml
+++ b/HealthTrackerApp/src/main/resources/log_in.fxml
@@ -32,46 +32,58 @@
       </GridPane>
       <HBox prefHeight="375.0" prefWidth="600.0">
          <children>
-            <HBox prefHeight="370.0" prefWidth="258.0">
+            <HBox prefHeight="198.0" prefWidth="258.0">
                <children>
-                  <ImageView fitHeight="354.0" fitWidth="257.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@icons/baseline_directions_run_black_24dp.png" />
-                     </image>
-                  </ImageView>
+                  <HBox prefHeight="100.0" prefWidth="200.0" />
+                  <HBox prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <VBox prefHeight="191.0" prefWidth="155.0">
+                           <children>
+                              <VBox prefHeight="158.0" prefWidth="155.0" />
+                              <ImageView fitHeight="172.0" fitWidth="155.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@icons/baseline_directions_run_black_48dp.png" />
+                                 </image>
+                              </ImageView>
+                              <VBox prefHeight="200.0" prefWidth="100.0" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="100.0" prefWidth="200.0" />
                </children>
             </HBox>
             <VBox prefHeight="63.0" prefWidth="343.0">
                <children>
-                  <HBox prefHeight="100.0" prefWidth="200.0" />
+                  <HBox prefHeight="62.0" prefWidth="343.0" />
                   <HBox prefHeight="31.0" prefWidth="343.0">
                      <children>
-                        <Label prefHeight="17.0" prefWidth="505.0" text="username / email" />
+                        <Label prefHeight="17.0" prefWidth="505.0" text="username / email:" />
                      </children>
                   </HBox>
                   <HBox layoutX="10.0" layoutY="10.0" prefHeight="75.0" prefWidth="343.0">
                      <children>
-                        <TextField fx:id="detailsTextField" />
+                        <TextField fx:id="detailsTextField" prefHeight="25.0" prefWidth="187.0" />
                      </children>
                   </HBox>
                   <HBox layoutX="10.0" layoutY="103.0" prefHeight="35.0" prefWidth="343.0">
                      <children>
-                        <Label prefHeight="17.0" prefWidth="507.0" text="password" />
+                        <Label prefHeight="17.0" prefWidth="507.0" text="password:" />
                      </children>
                   </HBox>
-                  <HBox layoutX="10.0" layoutY="294.0" prefHeight="63.0" prefWidth="343.0">
+                  <HBox layoutX="10.0" layoutY="294.0" prefHeight="37.0" prefWidth="343.0">
                      <children>
-                        <PasswordField fx:id="passwordTextField" />
+                        <PasswordField fx:id="passwordTextField" prefHeight="25.0" prefWidth="182.0" />
                      </children>
                   </HBox>
-                  <HBox layoutX="10.0" layoutY="10.0" prefHeight="24.0" prefWidth="343.0">
+                  <HBox layoutX="10.0" layoutY="10.0" prefHeight="39.0" prefWidth="343.0">
                      <children>
-                        <Label fx:id="errorField" prefHeight="17.0" prefWidth="347.0" />
+                        <Label fx:id="errorField" prefHeight="46.0" prefWidth="345.0" />
                      </children>
                   </HBox>
-                  <HBox layoutX="10.0" layoutY="210.0" prefHeight="100.0" prefWidth="200.0">
+                  <HBox layoutX="10.0" layoutY="210.0" prefHeight="75.0" prefWidth="343.0">
                      <children>
-                        <Button fx:id="loginButton" mnemonicParsing="false" onAction="#login" prefHeight="25.0" prefWidth="151.0" text="Login" />
+                        <Button fx:id="loginButton" mnemonicParsing="false" onAction="#login" prefHeight="25.0" prefWidth="186.0" text="Login" />
                      </children></HBox>
                </children></VBox>
          </children>
