--- a/HealthTrackerApp/src/main/resources/groups.fxml
+++ b/HealthTrackerApp/src/main/resources/groups.fxml
@@ -51,7 +51,7 @@
                   <Insets left="20.0" />
                </padding>
             </Label>
-            <Label text="Members: 12" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+            <Label fx:id="groupMemberCountLabel" text="Members: 12" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
                <font>
                   <Font size="24.0" />
                </font>
@@ -72,7 +72,7 @@
                <GridPane.margin>
                   <Insets right="20.0" />
                </GridPane.margin></Button>
-            <Button fx:id="leaveGroupButton" mnemonicParsing="false" text="Leave Group" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="7" GridPane.valignment="CENTER">
+            <Button fx:id="leaveGroupButton" mnemonicParsing="false" onAction="#LeaveGroup" text="Leave Group" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="7" GridPane.valignment="CENTER">
                <GridPane.margin>
                   <Insets right="20.0" />
                </GridPane.margin></Button>
@@ -146,14 +146,14 @@
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <ComboBox prefWidth="150.0" promptText="Select Group" visibleRowCount="5" GridPane.columnIndex="2" GridPane.rowIndex="2">
+            <ComboBox fx:id="usersGroupsComboBox" prefWidth="150.0" promptText="Select Group" visibleRowCount="5" GridPane.columnIndex="2" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets left="20.0" />
                </GridPane.margin>
             </ComboBox>
             <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="2">
                <children>
-                  <TextField maxWidth="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="100.0" promptText="Invite Code">
+                  <TextField fx:id="invCodeTextBox" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="100.0" promptText="Invite Code">
                      <HBox.margin>
                         <Insets left="20.0" />
                      </HBox.margin>
@@ -161,7 +161,7 @@
                         <Insets left="10.0" />
                      </padding>
                   </TextField>
-                  <Button fx:id="groupJoinButton" mnemonicParsing="false" text="Join">
+                  <Button fx:id="groupJoinButton" mnemonicParsing="false" onAction="#JoinGroup" text="Join">
                      <HBox.margin>
                         <Insets left="20.0" />
                      </HBox.margin>
