--- a/HealthTrackerApp/src/main/resources/no_group_landing_page.fxml
+++ b/HealthTrackerApp/src/main/resources/no_group_landing_page.fxml
@@ -20,6 +20,9 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="248.0" GridPane.columnIndex="1">
@@ -35,7 +38,7 @@
                   <Button mnemonicParsing="false" text="Log in" />
               </items>
             </ToolBar>
-            <Label text="Join A Group:" GridPane.rowIndex="2">
+            <Label text="Join A Group:" GridPane.rowIndex="5">
                <font>
                   <Font name="System Bold" size="24.0" />
                </font>
@@ -43,20 +46,20 @@
                   <Insets left="20.0" />
                </padding>
             </Label>
-            <Label text="Invite Code:" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+            <Label text="Invite Code:" GridPane.halignment="RIGHT" GridPane.rowIndex="6">
                <padding>
                   <Insets right="20.0" />
                </padding>
             </Label>
-            <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
                <children>
-                  <TextField fx:id="invCodeTextBox" onAction="#JoinGroup" prefHeight="26.0" prefWidth="163.0" promptText="Invite Code" />
+                  <TextField fx:id="invCodeTextBox" prefHeight="26.0" prefWidth="163.0" promptText="Invite Code" />
                </children>
                <padding>
                   <Insets left="20.0" />
                </padding>
             </HBox>
-            <Label layoutX="10.0" layoutY="68.0" text="OR" GridPane.rowIndex="5">
+            <Label layoutX="10.0" layoutY="68.0" text="OR" GridPane.rowIndex="8">
                <font>
                   <Font name="System Bold" size="24.0" />
                </font>
@@ -64,15 +67,34 @@
                   <Insets left="20.0" />
                </padding>
             </Label>
-            <Button mnemonicParsing="false" text="Create A Group" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="6">
+            <Button mnemonicParsing="false" onAction="#LoadCreateAGroupPage" text="Create A Group" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="9">
                <GridPane.margin>
                   <Insets left="20.0" />
                </GridPane.margin></Button>
-            <Button mnemonicParsing="false" text="Join" GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <Button mnemonicParsing="false" onAction="#JoinGroup" text="Join" GridPane.columnIndex="1" GridPane.rowIndex="7">
                <GridPane.margin>
                   <Insets left="20.0" />
                </GridPane.margin>
             </Button>
+            <Label text="Groups" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+               <padding>
+                  <Insets left="20.0" />
+               </padding>
+               <font>
+                  <Font name="System Bold" size="36.0" />
+               </font>
+            </Label>
+            <Label prefHeight="27.0" prefWidth="604.0" text="Join or create a group!" wrapText="true" GridPane.rowIndex="3">
+               <padding>
+                  <Insets left="20.0" />
+               </padding>
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
          </children>
       </GridPane>
    </children>
