--- a/HealthTrackerApp/src/main/resources/log_in.fxml
+++ b/HealthTrackerApp/src/main/resources/log_in.fxml
@@ -17,15 +17,15 @@
          <children>
             <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="248.0" GridPane.columnIndex="1">
                <items>
-                  <Button mnemonicParsing="false" text="Diet &amp; Exercise" />
-                  <Button mnemonicParsing="false" text="Goals" />
-                  <Button mnemonicParsing="false" onAction="#goToGroupPage" text="Groups" />
+                  <Button disable="true" mnemonicParsing="false" text="Diet &amp; Exercise" />
+                  <Button disable="true" mnemonicParsing="false" text="Goals" />
+                  <Button disable="true" mnemonicParsing="false" text="Groups" />
                </items>
             </ToolBar>
             <ToolBar prefHeight="40.0" prefWidth="352.0">
               <items>
-                <Button mnemonicParsing="false" text="Register" />
-                  <Button mnemonicParsing="false" text="Log in" />
+                <Button fx:id="main_menu" mnemonicParsing="false" onAction="#navigatePage" text="Register" />
+                  <Button fx:id="log_in" mnemonicParsing="false" onAction="#navigatePage" text="Log in" />
               </items>
             </ToolBar>
          </children>
