Added nav bar functions to fxml files

--- a/HealthTrackerApp/src/main/resources/group_creation.fxml
+++ b/HealthTrackerApp/src/main/resources/group_creation.fxml
@@ -129,5 +129,14 @@
                </padding></Label>
          </children>
       </GridPane>
+      <HBox prefHeight="100.0" prefWidth="200.0">
+         <children>
+            <Button mnemonicParsing="false" onAction="#goToGroupPage" text="View Group DashBoard">
+               <HBox.margin>
+                  <Insets left="20.0" />
+               </HBox.margin>
+            </Button>
+         </children>
+      </HBox>
    </children>
 </VBox>
