--- a/HealthTrackerApp/src/main/resources/manage_group.fxml
+++ b/HealthTrackerApp/src/main/resources/manage_group.fxml
@@ -110,7 +110,7 @@
                   <Insets left="20.0" />
                </GridPane.margin>
             </Button>
-            <Button mnemonicParsing="false" text="Delete Group" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+            <Button mnemonicParsing="false" onAction="#DeleteGroup" text="Delete Group" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets right="20.0" />
                </GridPane.margin>
