--- a/HealthTrackerApp/src/main/resources/view_activities_list.fxml
+++ b/HealthTrackerApp/src/main/resources/view_activities_list.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewActivitiesListController">
    <children>
@@ -29,10 +31,35 @@
             </ToolBar>
          </children>
       </GridPane>
+      <AnchorPane>
+         <children>
+             <Label fx:id="listActivitiesLabel" alignment="CENTER" contentDisplay="CENTER" textAlignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                 <text>All Activities</text>
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <rotationAxis>
+                  <Point3D />
+               </rotationAxis>
+             </Label>
+         </children>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
+      </AnchorPane>
       <AnchorPane prefHeight="300.0">
          <children>
             <ListView fx:id="exercisesList" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
          </children>
       </AnchorPane>
+      <HBox alignment="CENTER" spacing="60.0">
+         <children>
+            <Button mnemonicParsing="false" text="Button" />
+            <Button mnemonicParsing="false" text="View Activities Overview Graph" />
+         </children>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
+      </HBox>
    </children>
 </VBox>
