--- a/HealthTrackerApp/src/main/resources/dashboard.fxml
+++ b/HealthTrackerApp/src/main/resources/dashboard.fxml
@@ -18,9 +18,10 @@
          <children>
             <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="248.0" GridPane.columnIndex="1">
                <items>
-                  <Button disable="true" mnemonicParsing="false" text="Diet &amp; Exercise" />
-                  <Button disable="true" mnemonicParsing="false" text="Goals" />
-                  <Button disable="true" mnemonicParsing="false" text="Groups" />
+                  <Button fx:id="diet" mnemonicParsing="false" onAction="#navigatePage" text="Diet &amp; Exercise" />
+                  <Button fx:id="goals" mnemonicParsing="false" onAction="#navigatePage" text="Goals" />
+                  <Button mnemonicParsing="false" onAction="#goToGroupPage" text="Groups" />
+                  <Button fx:id="dashboard" layoutX="160.0" layoutY="10.0" mnemonicParsing="false" onAction="#navigatePage" text="Dashboard" />
                </items>
             </ToolBar>
             <ToolBar prefHeight="40.0" prefWidth="352.0">
@@ -121,7 +122,7 @@
             </Label>
          </children>
       </GridPane>
-      <GridPane layoutX="10.0" layoutY="40.0">
+      <GridPane layoutX="10.0" layoutY="40.0" prefHeight="32.0" prefWidth="600.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="362.0" minWidth="10.0" prefWidth="160.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="362.0" minWidth="3.0" prefWidth="19.0" />
@@ -130,8 +131,8 @@
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="369.0" minWidth="10.0" prefWidth="203.0" />
          </columnConstraints>
          <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="28.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="15.0" minHeight="4.0" prefHeight="4.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
             <Label prefHeight="27.0" prefWidth="112.0" text="Classification:" GridPane.columnIndex="3">
