--- a/HealthTrackerApp/src/main/resources/goals.fxml
+++ b/HealthTrackerApp/src/main/resources/goals.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.goalController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.goalController">
    <children>
       <GridPane>
         <columnConstraints>
@@ -20,7 +20,8 @@
                <items>
                   <Button fx:id="diet" mnemonicParsing="false" onAction="#navigatePage" text="Diet &amp; Exercise" />
                   <Button fx:id="goals" mnemonicParsing="false" onAction="#navigatePage" text="Goals" />
-                  <Button fx:id="group" mnemonicParsing="false" onAction="#navigatePage" text="Groups" />
+                  <Button fx:id="group" mnemonicParsing="false" onAction="#goToGroupPage" text="Groups" />
+                  <Button fx:id="dashboard" layoutX="160.0" layoutY="10.0" mnemonicParsing="false" onAction="#navigatePage" text="Dashboard" />
                </items>
                <GridPane.margin>
                   <Insets top="10.0" />
