--- a/HealthTrackerApp/src/main/resources/goals.fxml
+++ b/HealthTrackerApp/src/main/resources/goals.fxml
@@ -30,7 +30,7 @@
             <ToolBar prefHeight="40.0" prefWidth="352.0">
               <items>
                 <Button fx:id="main_menu" mnemonicParsing="false" onAction="#navigatePage" text="Register" />
-                  <Button fx:id="log_in" mnemonicParsing="false" onAction="#navigatePage" text="Log in" />
+                  <Button fx:id="log_in" mnemonicParsing="false" onAction="#navigatePage" text="Log out" />
               </items>
                <GridPane.margin>
                   <Insets top="10.0" />
