--- a/HealthTrackerApp/src/main/resources/groups.fxml
+++ b/HealthTrackerApp/src/main/resources/groups.fxml
@@ -36,7 +36,7 @@
             <ToolBar prefHeight="40.0" prefWidth="352.0">
               <items>
                 <Button fx:id="main_menu" mnemonicParsing="false" onAction="#navigatePage" text="Register" />
-                  <Button fx:id="log_in" mnemonicParsing="false" onAction="#navigatePage" text="Log in" />
+                  <Button fx:id="log_in" mnemonicParsing="false" onAction="#navigatePage" text="Log out" />
               </items>
             </ToolBar>
             <Label fx:id="groupNameLabel" text="Group Name" GridPane.rowIndex="2">
