--- a/HealthTrackerApp/src/main/resources/manage_group.fxml
+++ b/HealthTrackerApp/src/main/resources/manage_group.fxml
@@ -37,7 +37,7 @@
             <ToolBar prefHeight="40.0" prefWidth="352.0">
               <items>
                 <Button fx:id="main_menu" mnemonicParsing="false" text="Register" />
-                  <Button fx:id="log_in" mnemonicParsing="false" onAction="#navigatePage" text="Log in" />
+                  <Button fx:id="log_in" mnemonicParsing="false" onAction="#navigatePage" text="Log out" />
               </items>
             </ToolBar>
             <Label text="Manage Group" GridPane.rowIndex="2">
