--- a/HealthTrackerApp/src/main/resources/exercise_list_cell.fxml
+++ b/HealthTrackerApp/src/main/resources/exercise_list_cell.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<HBox fx:id="hBox" alignment="CENTER" style="-fx-border-color: black;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <HBox alignment="CENTER" prefWidth="250.0">
+<HBox fx:id="hBox" alignment="CENTER" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <HBox alignment="CENTER" prefWidth="220.0">
       <children>
           <ImageView>
             <image>
@@ -58,4 +59,18 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
         </padding>
     </HBox>
+   <Button fx:id="deleteCellButton" mnemonicParsing="false">
+      <padding>
+         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+      </padding>
+      <HBox.margin>
+         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+      </HBox.margin>
+      <graphic>
+         <ImageView pickOnBounds="true" preserveRatio="true">
+            <image>
+               <Image url="@icons/baseline_delete_black_24dp.png" />
+            </image></ImageView>
+      </graphic>
+   </Button>
 </HBox>
