--- a/HealthTrackerApp/src/main/resources/view_activities_list.fxml
+++ b/HealthTrackerApp/src/main/resources/view_activities_list.fxml
@@ -52,14 +52,15 @@
             <ListView fx:id="exercisesList" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
          </children>
       </AnchorPane>
-      <HBox alignment="CENTER" spacing="60.0">
-         <children>
-            <Button mnemonicParsing="false" text="Button" />
-            <Button mnemonicParsing="false" text="View Activities Overview Graph" />
-         </children>
-         <padding>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-         </padding>
-      </HBox>
+       <HBox alignment="CENTER" spacing="25.0">
+           <children>
+               <DatePicker fx:id="dateFrom" promptText="From" />
+               <DatePicker fx:id="dateTo" promptText="To" />
+               <Button fx:id="dateRangeButton" mnemonicParsing="false" onAction="#changeDateRange" text="View Range" />
+           </children>
+           <padding>
+               <Insets bottom="5.0" top="5.0" />
+           </padding>
+       </HBox>
    </children>
 </VBox>
